--- a/src/app/book-form/book-form.component.html
+++ b/src/app/book-form/book-form.component.html
@@ -68,10 +68,10 @@
       <td>
         <mat-form-field class="form-field">
           <mat-select name="arIl" [(ngModel)]="data['arIl']" placeholder="AR 阅读兴趣年龄段">
-            <mat-option value="LG(K-3)">LG(K-3)</mat-option>
-            <mat-option value="MG(4-8)">MG(4-8)</mat-option>
-            <mat-option value="MG+(6 AND UP)">MG+(6 AND UP)</mat-option>
-            <mat-option value="UG(9-12)">UG(9-12)</mat-option>
+            <mat-option value="LG">LG</mat-option>
+            <mat-option value="MG">MG</mat-option>
+            <mat-option value="MG+">MG+</mat-option>
+            <mat-option value="UG">UG</mat-option>
           </mat-select>
           <mat-hint>[arIl] (Interest Level, IL)</mat-hint>
         </mat-form-field>
